<resources>
    <string name="app_name">Covid-19 Tracker</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="please_enter_your_phone_number_to_continue">Please Enter Your Phone Number to continue</string>
    <string name="hint_enter_your_phone_number">Enter mobile number</string>
    <string name="bt_continue">continue</string>
    <string name="wait_for_the_verification_code">Wait for the Verification code</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="sign_in">sign in</string>
    <string name="log_out_menu">LOG OUT</string>
    <string name="covid_19_tracker">Covid19 Tracker</string>
    <string name="confirm">Confirmed</string>
    <string name="active">Active</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="india">INDIA</string>
    <string name="test">Test</string>
    <string name="tv_country_name">Country Name</string>
    <string name="tv_total_cases">Total Cases</string>
    <string name="hint_search_country">Search Country</string>
    <string name="get_help">Other details</string>
    <string name="about_vaccine">About Vaccine</string>

    //VaccineActivity

    <string name="search">Search</string>
    <string name="enter_your_postal_address">Enter Your Postal Address</string>
    <string name="enter_your_pin">Enter Your Pin</string>
    <string name="date">Date</string>
    <string name="age_limit">Age Limit</string>
    <string name="type">Type:</string>
    <string name="available">Available</string>
    <string name="list_of_indian_states">List of Indian States</string>
    <string name="bt_check_updates">Check updates</string>
    <string name="tv_tracker">Covid-19 Stats</string>
    <string name="tv_last_updated">last updated</string>
    <string name="tv_confirmed">Confirmed</string>
    <string name="decreased">decreased</string>
    <string name="tv_state_ut">State/Ut</string>
    <string name="cnfmd">CNFMD</string>
    <string name="actv">actv</string>
    <string name="rcvrd">rcvrd</string>
    <string name="dcsd">dcsd</string>
    <string name="check_for_vaccine_center">Check Vaccine Center</string>
    <string name="bt_book_slot">Book slot</string>
    <string name="click_for_details">Click for details</string>
    <string name="book_vaccine_slot">Book vaccine slot</string>
    <string name="help_regarding_vaccine">Help regarding vaccine</string>
    <string name="expert_advice">Expert advice</string>
    <string name="government_of_india_website">Government of India Website</string>
    <string name="help_line_numbers">Helpline numbers</string>
    <string name="health_ministry">Health Ministry</string>
    <string name="_1075">1075</string>
    <string name="child">Child Helpdesk</string>
    <string name="_1098">1098</string>
    <string name="_08046110007">08046110007</string>
    <string name="mental_health">Mental Health</string>
    <string name="_14567">14567</string>
    <string name="senior_citizens">Senior Citizens</string>
    <string name="_14443">14443</string>
    <string name="ayush_ministry">Ayush Ministry</string>
    <string name="_9013151515">9013151515</string>
    <string name="whatsapp_help">WhatsApp Helpdesk</string>
    <string name="ncov2019_gov_in">ncov2019@gov.in</string>
    <string name="email_helpdesk">Email Helpdesk</string>
    <string name="blog_news_updates"><![CDATA[Blog & news updates]]></string>
    <string name="travel_guidelines">Travel Guidelines In India</string>
    <string name="common_faq">Common FAQ</string>
    <string name="check_beds_availability">Check beds availability</string>
    <string name="covid_symptoms">Covid Symptoms</string>
    <string name="high_fever">High Fever</string>
    <string name="dry_cough">Dry Cough</string>
    <string name="sore_throat">Sore throat</string>
    <string name="difficulty_in_breathing">Difficulty in Breathing</string>
    <string name="donate">Donate</string>
    <string name="help_amp_donate"><![CDATA[Help & Donate]]></string>
    <string name="donate_for_a_cause">Donate for a Cause</string>
    <string name="resources">Resources</string>

</resources>