<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_over_card_view"
    tools:context=".getHelp.HelpLineNumbersActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:columnCount="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/health_ministry"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ministry_health"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1075"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health_ministry"
                        android:textStyle="bold"
                        android:layout_marginTop="7dp"
                        android:textSize="14sp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/child_help"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/children"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1098"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textAllCaps="true"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/child"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginTop="7dp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mental_help"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/mental_health"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_08046110007"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mental_health"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/senior_help"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/senior_citizen"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_14567"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/senior_citizens"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ayush_ministry"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_cardview"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ayush_ministry"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_14443"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ayush_ministry"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/whatsapp_help"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_cardview"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/whatsapp"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_9013151515"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whatsapp_help"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="7dp"
                        android:textSize="12sp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/email_help"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_cardview"
            app:cardCornerRadius="20dp"
            app:strokeColor="#E91E63"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_cardview"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/email"
                    android:layout_gravity="center"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="9dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ncov2019_gov_in"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_helpdesk"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginTop="2dp"
                        android:textSize="12sp"
                        android:textColor="#9C27B0" />


                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </GridLayout>



</androidx.constraintlayout.widget.ConstraintLayout>